<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_filter_variant"
        android:title="Item 1"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/list_meetings_filter_date"
                android:title="@string/filter_date"/>
...
