<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/dialog_picker_room_list"
        android:name="com.example.mareu.ui.FragmentMeeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:context=".ui.MeetingFragment"
        tools:listitem="@layout/item_list_room_simple"/>
</LinearLayout>