...

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Ma réu"/>

        </RelativeLayout>

...
